# yagips

./: .gitattributes  .gitignore  Changelog  License-Contrib.md  Makefile.am  Readme.md  Todo.md  configure.ac  git-version-gen  hk4e_cn  query_curr_region.php  query_region_list.php
account/risky/api/: check.php
admin/mi18n/plat_oversea/m202003049/: m202003049-de-de.json  m202003049-de.json  m202003049-en-gb.json  m202003049-en.json  m202003049-es-es.json  m202003049-es.json  m202003049-fr-fr.json  m202003049-fr.json  m202003049-id-id.json  m202003049-id.json  m202003049-it-it.json  m202003049-it.json  m202003049-ja-jp.json  m202003049-ja.json  m202003049-ko-kr.json  m202003049-ko.json  m202003049-pt-pt.json  m202003049-pt.json  m202003049-ru-ru.json  m202003049-ru.json  m202003049-th-th.json  m202003049-th.json  m202003049-tr-tr.json  m202003049-tr.json  m202003049-vi-vn.json  m202003049-vi.json  m202003049-zh-cn.json  m202003049-zh-hk.json  m202003049-zh-tw.json  m202003049-zh.json
combo/box/api/config/sdk/: combo.php
device-fp/api/: getExtList.php
gnulib/: Makefile.am
hk4e_global/combo/granter/api/: compareProtocolVersion.php  getConfig.php  getFont.php
hk4e_global/combo/granter/login/v2/: login.php
hk4e_global/mdk/agreement/api/: getAgreementInfos.php
hk4e_global/mdk/shield/api/: loadConfig.php  login.php  verify.php
include/: account.h  avatar.h  command.h  config.h  console.h  crypt.h  data.h  dbgate.h  dispatch.h  ec2b.h  enum.h  gameserver.h  http.h  item.h  kcp.h  kcpsession.h  keys.h  mt19937-64.h  packet.h  permission.h  player.h  prop.h  runconfig.h  scene.h  session.h  team.h  toml.h  util.h  vector.h  world.h
include/commands/: account.h  all.h
include/data/: avatar_data.h  openstate_data.h
include/enum/: fight_prop.h  grow_curve.h  item.h  openstate.h
m4/: gnulib-cache.m4  gnulib-comp.m4
sdk/: dataUpload.php
src/: Makefile.am  account.cpp  avatar.cpp  command.cpp  config.cpp  console.cpp  crypt.c  crypt.cpp  data.cpp  dbgate.cpp  dispatch.cpp  ec2b.cpp  enum.c  gameserver.cpp  http.c  item.cpp  kcp.c  kcpsession.cpp  keys.c  mt19937-64.c  packet.cpp  packet_handlers.cpp  player.cpp  prop.c  runconfig.cpp  session.cpp  team.cpp  toml.c  util.cpp  vector.cpp  yagips.cpp
src/commands/: account.cpp
src/data/: avatar_data.cpp  openstate_data.cpp
src/enum/: fight_prop.c  grow_curve.c  item.c  openstate.c
src/packets/: enter_scene.cpp  ping.cpp  player_login.cpp  player_token.cpp
src/proto/: ability.proto  achievement.proto  activity.proto  avatar.proto  battle_pass.proto  block_info.proto  blossom.proto  chat.proto  codex.proto  coop.proto  define.proto  dispatch.proto  dungeon.proto  fight.proto  gacha.proto  gadget.proto  hunting.proto  id_config.proto  investigation.proto  item.proto  login.proto  mail.proto  match.proto  mechanicus.proto  miracle_ring.proto  misc.proto  monster.proto  mp.proto  multistage_play.proto  npc.proto  offering.proto  op_activity.proto  packet_head.proto  pathfinding.proto  ping.proto  player.proto  player_token.proto  property.proto  quest.proto  recharge.proto  (+14 more)
